// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftviewCardsList > renders correctly 1`] = `
<div
  class="v-row mx-n4 px-4 py-2"
  data-v-a4b85290=""
  icon="string"
  iconcolorkey="string"
  secondaryactiontext="string"
  subtitleicon="string"
  subtitleiconcondition="string"
  subtitlesuffixkey="doneBy,dueString,doneString,frequencyString"
  subtitletextkey="[object Object],due,done,frequency"
  tertiaryactiontext="string"
>
  
  <v-col-stub
    class="mb-2"
    cols="12"
    data-v-a4b85290=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <v-hover-stub
      data-v-a4b85290=""
      disabled="false"
    >
      <v-card-stub
        border="false"
        class="pa-0"
        data-v-a4b85290=""
        density="default"
        disabled="false"
        elevation="2"
        exact="false"
        flat="false"
        hover="false"
        loading="false"
        replace="false"
        ripple="true"
        tag="div"
        tile="false"
        variant="elevated"
      >
        <div
          class="list-item d-flex flex-column py-2 px-4"
          data-v-a4b85290=""
          ripple="true"
        >
          <div
            class="d-flex full-width"
            data-v-a4b85290=""
          >
            <!--v-if-->
            <div
              class="overflow-hidden flex-grow-1"
              data-v-a4b85290=""
            >
              <v-tooltip-stub
                activatorprops="[object Object]"
                attach="false"
                closeonback="false"
                closeoncontentclick="false"
                contained="false"
                data-v-a4b85290=""
                disabled="true"
                eager="true"
                interactive="false"
                location="top"
                locationstrategy="connected"
                minwidth="0"
                modelvalue="false"
                noclickanimation="false"
                offset="10"
                openonclick="false"
                openonhover="true"
                origin="auto"
                persistent="false"
                scrim="false"
                scrollstrategy="reposition"
                sticktotarget="false"
                text="name"
                viewportmargin="12"
                zindex="2000"
              />
              <v-list-item-subtitle-stub
                class="d-flex mt-1 flex-wrap align-center"
                data-v-a4b85290=""
                tag="div"
              >
                
                
              </v-list-item-subtitle-stub>
            </div>
            <div
              class="shiftview-card__actions d-flex"
              data-v-a4b85290=""
            >
              <v-tooltip-stub
                activatorprops="[object Object]"
                attach="false"
                closeonback="false"
                closeoncontentclick="false"
                contained="false"
                data-v-a4b85290=""
                disabled="false"
                eager="true"
                interactive="false"
                location="top"
                locationstrategy="connected"
                minwidth="0"
                modelvalue="false"
                noclickanimation="false"
                offset="10"
                openonclick="false"
                openonhover="true"
                origin="auto"
                persistent="false"
                scrim="false"
                scrollstrategy="reposition"
                sticktotarget="false"
                text=""
                viewportmargin="12"
                zindex="2000"
              />
              <v-tooltip-stub
                activatorprops="[object Object]"
                attach="false"
                closeonback="false"
                closeoncontentclick="false"
                contained="false"
                data-v-a4b85290=""
                disabled="false"
                eager="true"
                interactive="false"
                location="top"
                locationstrategy="connected"
                minwidth="0"
                modelvalue="false"
                noclickanimation="false"
                offset="10"
                openonclick="false"
                openonhover="true"
                origin="auto"
                persistent="false"
                scrim="false"
                scrollstrategy="reposition"
                sticktotarget="false"
                text="Delete"
                viewportmargin="12"
                zindex="2000"
              />
              <v-tooltip-stub
                activatorprops="[object Object]"
                attach="false"
                closeonback="false"
                closeoncontentclick="false"
                contained="false"
                data-v-a4b85290=""
                disabled="true"
                eager="true"
                interactive="false"
                location="top"
                locationstrategy="connected"
                minwidth="0"
                modelvalue="false"
                noclickanimation="false"
                offset="10"
                openonclick="false"
                openonhover="true"
                origin="auto"
                persistent="false"
                scrim="false"
                scrollstrategy="reposition"
                sticktotarget="false"
                text="Edit"
                viewportmargin="12"
                zindex="2000"
              />
              
              
            </div>
          </div>
          <!--v-if-->
          
          
        </div>
      </v-card-stub>
    </v-hover-stub>
  </v-col-stub>
  <v-col-stub
    class="mb-2"
    cols="12"
    data-v-a4b85290=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <v-hover-stub
      data-v-a4b85290=""
      disabled="false"
    >
      <v-card-stub
        border="false"
        class="pa-0"
        data-v-a4b85290=""
        density="default"
        disabled="false"
        elevation="2"
        exact="false"
        flat="false"
        hover="false"
        loading="false"
        replace="false"
        ripple="true"
        tag="div"
        tile="false"
        variant="elevated"
      >
        <div
          class="list-item d-flex flex-column py-2 px-4"
          data-v-a4b85290=""
          ripple="true"
        >
          <div
            class="d-flex full-width"
            data-v-a4b85290=""
          >
            <!--v-if-->
            <div
              class="overflow-hidden flex-grow-1"
              data-v-a4b85290=""
            >
              <v-tooltip-stub
                activatorprops="[object Object]"
                attach="false"
                closeonback="false"
                closeoncontentclick="false"
                contained="false"
                data-v-a4b85290=""
                disabled="true"
                eager="true"
                interactive="false"
                location="top"
                locationstrategy="connected"
                minwidth="0"
                modelvalue="false"
                noclickanimation="false"
                offset="10"
                openonclick="false"
                openonhover="true"
                origin="auto"
                persistent="false"
                scrim="false"
                scrollstrategy="reposition"
                sticktotarget="false"
                text="name2"
                viewportmargin="12"
                zindex="2000"
              />
              <v-list-item-subtitle-stub
                class="d-flex mt-1 flex-wrap align-center"
                data-v-a4b85290=""
                tag="div"
              >
                
                
              </v-list-item-subtitle-stub>
            </div>
            <div
              class="shiftview-card__actions d-flex"
              data-v-a4b85290=""
            >
              <v-tooltip-stub
                activatorprops="[object Object]"
                attach="false"
                closeonback="false"
                closeoncontentclick="false"
                contained="false"
                data-v-a4b85290=""
                disabled="false"
                eager="true"
                interactive="false"
                location="top"
                locationstrategy="connected"
                minwidth="0"
                modelvalue="false"
                noclickanimation="false"
                offset="10"
                openonclick="false"
                openonhover="true"
                origin="auto"
                persistent="false"
                scrim="false"
                scrollstrategy="reposition"
                sticktotarget="false"
                text=""
                viewportmargin="12"
                zindex="2000"
              />
              <v-tooltip-stub
                activatorprops="[object Object]"
                attach="false"
                closeonback="false"
                closeoncontentclick="false"
                contained="false"
                data-v-a4b85290=""
                disabled="false"
                eager="true"
                interactive="false"
                location="top"
                locationstrategy="connected"
                minwidth="0"
                modelvalue="false"
                noclickanimation="false"
                offset="10"
                openonclick="false"
                openonhover="true"
                origin="auto"
                persistent="false"
                scrim="false"
                scrollstrategy="reposition"
                sticktotarget="false"
                text="Delete"
                viewportmargin="12"
                zindex="2000"
              />
              <v-tooltip-stub
                activatorprops="[object Object]"
                attach="false"
                closeonback="false"
                closeoncontentclick="false"
                contained="false"
                data-v-a4b85290=""
                disabled="true"
                eager="true"
                interactive="false"
                location="top"
                locationstrategy="connected"
                minwidth="0"
                modelvalue="false"
                noclickanimation="false"
                offset="10"
                openonclick="false"
                openonhover="true"
                origin="auto"
                persistent="false"
                scrim="false"
                scrollstrategy="reposition"
                sticktotarget="false"
                text="Edit"
                viewportmargin="12"
                zindex="2000"
              />
              
              
            </div>
          </div>
          <!--v-if-->
          
          
        </div>
      </v-card-stub>
    </v-hover-stub>
  </v-col-stub>
  <v-col-stub
    class=""
    cols="12"
    data-v-a4b85290=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <v-hover-stub
      data-v-a4b85290=""
      disabled="false"
    >
      <v-card-stub
        border="false"
        class="pa-0"
        data-v-a4b85290=""
        density="default"
        disabled="false"
        elevation="2"
        exact="false"
        flat="false"
        hover="false"
        loading="false"
        replace="false"
        ripple="true"
        tag="div"
        tile="false"
        variant="elevated"
      >
        <div
          class="list-item d-flex flex-column py-2 px-4"
          data-v-a4b85290=""
          ripple="true"
        >
          <div
            class="d-flex full-width"
            data-v-a4b85290=""
          >
            <!--v-if-->
            <div
              class="overflow-hidden flex-grow-1"
              data-v-a4b85290=""
            >
              <v-tooltip-stub
                activatorprops="[object Object]"
                attach="false"
                closeonback="false"
                closeoncontentclick="false"
                contained="false"
                data-v-a4b85290=""
                disabled="true"
                eager="true"
                interactive="false"
                location="top"
                locationstrategy="connected"
                minwidth="0"
                modelvalue="false"
                noclickanimation="false"
                offset="10"
                openonclick="false"
                openonhover="true"
                origin="auto"
                persistent="false"
                scrim="false"
                scrollstrategy="reposition"
                sticktotarget="false"
                text="name3"
                viewportmargin="12"
                zindex="2000"
              />
              <v-list-item-subtitle-stub
                class="d-flex mt-1 flex-wrap align-center"
                data-v-a4b85290=""
                tag="div"
              >
                
                
              </v-list-item-subtitle-stub>
            </div>
            <div
              class="shiftview-card__actions d-flex"
              data-v-a4b85290=""
            >
              <v-tooltip-stub
                activatorprops="[object Object]"
                attach="false"
                closeonback="false"
                closeoncontentclick="false"
                contained="false"
                data-v-a4b85290=""
                disabled="false"
                eager="true"
                interactive="false"
                location="top"
                locationstrategy="connected"
                minwidth="0"
                modelvalue="false"
                noclickanimation="false"
                offset="10"
                openonclick="false"
                openonhover="true"
                origin="auto"
                persistent="false"
                scrim="false"
                scrollstrategy="reposition"
                sticktotarget="false"
                text=""
                viewportmargin="12"
                zindex="2000"
              />
              <v-tooltip-stub
                activatorprops="[object Object]"
                attach="false"
                closeonback="false"
                closeoncontentclick="false"
                contained="false"
                data-v-a4b85290=""
                disabled="false"
                eager="true"
                interactive="false"
                location="top"
                locationstrategy="connected"
                minwidth="0"
                modelvalue="false"
                noclickanimation="false"
                offset="10"
                openonclick="false"
                openonhover="true"
                origin="auto"
                persistent="false"
                scrim="false"
                scrollstrategy="reposition"
                sticktotarget="false"
                text="Delete"
                viewportmargin="12"
                zindex="2000"
              />
              <v-tooltip-stub
                activatorprops="[object Object]"
                attach="false"
                closeonback="false"
                closeoncontentclick="false"
                contained="false"
                data-v-a4b85290=""
                disabled="true"
                eager="true"
                interactive="false"
                location="top"
                locationstrategy="connected"
                minwidth="0"
                modelvalue="false"
                noclickanimation="false"
                offset="10"
                openonclick="false"
                openonhover="true"
                origin="auto"
                persistent="false"
                scrim="false"
                scrollstrategy="reposition"
                sticktotarget="false"
                text="Edit"
                viewportmargin="12"
                zindex="2000"
              />
              
              
            </div>
          </div>
          <!--v-if-->
          
          
        </div>
      </v-card-stub>
    </v-hover-stub>
  </v-col-stub>
  
</div>
`;

exports[`ShiftviewCardsList > renders correctly when disabled 1`] = `
<div
  class="v-row mx-n4 px-4 py-2"
  data-v-a4b85290=""
  icon="string"
  iconcolorkey="string"
  secondaryactiontext="string"
  subtitleicon="string"
  subtitleiconcondition="string"
  subtitlesuffixkey="doneBy,dueString,doneString,frequencyString"
  subtitletextkey="[object Object],due,done,frequency"
  tertiaryactiontext="string"
>
  
  <v-col-stub
    class="mb-2"
    cols="12"
    data-v-a4b85290=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <v-hover-stub
      data-v-a4b85290=""
      disabled="false"
    >
      <v-card-stub
        border="false"
        class="pa-0"
        data-v-a4b85290=""
        density="default"
        disabled="false"
        elevation="2"
        exact="false"
        flat="false"
        hover="false"
        loading="false"
        replace="false"
        ripple="false"
        tag="div"
        tile="false"
        variant="elevated"
      >
        <div
          class="list-item d-flex flex-column py-2 px-4"
          data-v-a4b85290=""
          ripple="false"
        >
          <div
            class="d-flex full-width"
            data-v-a4b85290=""
          >
            <!--v-if-->
            <div
              class="overflow-hidden flex-grow-1"
              data-v-a4b85290=""
            >
              <v-tooltip-stub
                activatorprops="[object Object]"
                attach="false"
                closeonback="false"
                closeoncontentclick="false"
                contained="false"
                data-v-a4b85290=""
                disabled="true"
                eager="true"
                interactive="false"
                location="top"
                locationstrategy="connected"
                minwidth="0"
                modelvalue="false"
                noclickanimation="false"
                offset="10"
                openonclick="false"
                openonhover="true"
                origin="auto"
                persistent="false"
                scrim="false"
                scrollstrategy="reposition"
                sticktotarget="false"
                text="name"
                viewportmargin="12"
                zindex="2000"
              />
              <v-list-item-subtitle-stub
                class="d-flex mt-1 flex-wrap align-center"
                data-v-a4b85290=""
                tag="div"
              >
                
                
              </v-list-item-subtitle-stub>
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
          
          
        </div>
      </v-card-stub>
    </v-hover-stub>
  </v-col-stub>
  <v-col-stub
    class="mb-2"
    cols="12"
    data-v-a4b85290=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <v-hover-stub
      data-v-a4b85290=""
      disabled="false"
    >
      <v-card-stub
        border="false"
        class="pa-0"
        data-v-a4b85290=""
        density="default"
        disabled="false"
        elevation="2"
        exact="false"
        flat="false"
        hover="false"
        loading="false"
        replace="false"
        ripple="false"
        tag="div"
        tile="false"
        variant="elevated"
      >
        <div
          class="list-item d-flex flex-column py-2 px-4"
          data-v-a4b85290=""
          ripple="false"
        >
          <div
            class="d-flex full-width"
            data-v-a4b85290=""
          >
            <!--v-if-->
            <div
              class="overflow-hidden flex-grow-1"
              data-v-a4b85290=""
            >
              <v-tooltip-stub
                activatorprops="[object Object]"
                attach="false"
                closeonback="false"
                closeoncontentclick="false"
                contained="false"
                data-v-a4b85290=""
                disabled="true"
                eager="true"
                interactive="false"
                location="top"
                locationstrategy="connected"
                minwidth="0"
                modelvalue="false"
                noclickanimation="false"
                offset="10"
                openonclick="false"
                openonhover="true"
                origin="auto"
                persistent="false"
                scrim="false"
                scrollstrategy="reposition"
                sticktotarget="false"
                text="name2"
                viewportmargin="12"
                zindex="2000"
              />
              <v-list-item-subtitle-stub
                class="d-flex mt-1 flex-wrap align-center"
                data-v-a4b85290=""
                tag="div"
              >
                
                
              </v-list-item-subtitle-stub>
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
          
          
        </div>
      </v-card-stub>
    </v-hover-stub>
  </v-col-stub>
  <v-col-stub
    class=""
    cols="12"
    data-v-a4b85290=""
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <v-hover-stub
      data-v-a4b85290=""
      disabled="false"
    >
      <v-card-stub
        border="false"
        class="pa-0"
        data-v-a4b85290=""
        density="default"
        disabled="false"
        elevation="2"
        exact="false"
        flat="false"
        hover="false"
        loading="false"
        replace="false"
        ripple="false"
        tag="div"
        tile="false"
        variant="elevated"
      >
        <div
          class="list-item d-flex flex-column py-2 px-4"
          data-v-a4b85290=""
          ripple="false"
        >
          <div
            class="d-flex full-width"
            data-v-a4b85290=""
          >
            <!--v-if-->
            <div
              class="overflow-hidden flex-grow-1"
              data-v-a4b85290=""
            >
              <v-tooltip-stub
                activatorprops="[object Object]"
                attach="false"
                closeonback="false"
                closeoncontentclick="false"
                contained="false"
                data-v-a4b85290=""
                disabled="true"
                eager="true"
                interactive="false"
                location="top"
                locationstrategy="connected"
                minwidth="0"
                modelvalue="false"
                noclickanimation="false"
                offset="10"
                openonclick="false"
                openonhover="true"
                origin="auto"
                persistent="false"
                scrim="false"
                scrollstrategy="reposition"
                sticktotarget="false"
                text="name3"
                viewportmargin="12"
                zindex="2000"
              />
              <v-list-item-subtitle-stub
                class="d-flex mt-1 flex-wrap align-center"
                data-v-a4b85290=""
                tag="div"
              >
                
                
              </v-list-item-subtitle-stub>
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
          
          
        </div>
      </v-card-stub>
    </v-hover-stub>
  </v-col-stub>
  
</div>
`;
